save these changes

--- a/MLConcepts.ipynb
+++ b/MLConcepts.ipynb
@@ -4,9 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Core ML Concepts\n",
+    "<div style=\"background-color:#f9f9f9; padding:10px; border: 1px solid #ccc; border-radius: 5px;\">\n",
+    "    <span style=\"color:#333; font-size:16px; font-weight:bold;\">Core ML Concepts</span><br>\n",
+    "    <span style=\"color:#666; font-size:14px;\">In machine learning, mastering fundamental models and algorithms is essential. Below, you'll find 50 core ML concepts that you can implement from scratch to deepen your understanding:\n",
+    "</span>\n",
+    "</div>\n",
     "\n",
-    "In machine learning, mastering fundamental models and algorithms is essential. Below, you'll find 50 core ML concepts that you can implement from scratch to deepen your understanding:\n",
+    "\n",
+    "<details>\n",
+    "<summary><span style=\"color:blue\">Core ML Concepts</span></summary>\n",
+    "\n",
+    "\n",
     "\n",
     "1. **Linear Regression:** Predicts continuous values based on linear relationships in data.\n",
     "2. **Logistic Regression:** Classifies data using a logistic function for binary outcomes.\n",
@@ -59,6 +67,7 @@
     "49. **Matrix Factorization:** Decomposes a matrix into product of matrices to capture latent factors.\n",
     "50. **Factorization Machine:** Model that captures interactions between features using factorization.\n",
     "\n",
+    "</details>\n",
     "Explore these concepts to build a solid foundation in machine learning and data science!\n"
    ]
   }
