--- a/ML_Geoscience.ipynb
+++ b/ML_Geoscience.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploration of Machine Learning Applications in Geoscience\n",
+    "<div style=\"background-color:#f9f9f9; padding:10px; border: 1px solid #ccc; border-radius: 5px;\">\n",
+    "    <span style=\"color:#333; font-size:16px; font-weight:bold;\">Exploration of Machine Learning Applications in Geoscience</span><br>\n",
+    "    <span style=\"color:#666; font-size:14px;\">This notebook explores various machine learning applications in geoscience, leveraging diverse datasets and advanced algorithms to address complex challenges in the field. The following topics will be covered:\n",
+    "</span>\n",
+    "</div>\n",
     "\n",
-    "This notebook explores various machine learning applications in geoscience, leveraging diverse datasets and advanced algorithms to address complex challenges in the field. The following topics will be covered:\n",
+    "\n",
+    "<details>\n",
+    "<summary><span style=\"color:blue\">Exploration of Machine Learning Applications in Geoscience</span></summary>\n",
+    "\n",
     "\n",
     "1. Predicting ore grade based on geological features using linear regression.\n",
     "2. Classifying mineral types based on spectral data using logistic regression.\n",
@@ -58,6 +65,7 @@
     "48. Mapping geological formations using remote sensing and machine learning.\n",
     "49. Predicting the impact of climate change on ecosystems using machine learning.\n",
     "50. Estimating the carbon footprint of mining activities using machine learning.\n",
+    "</details>\n",
     "\n",
     "Each section includes code examples, analysis techniques, and insights gained from applying machine learning to geoscientific data. Join me on this journey through the intersection of data science and earth sciences!\n"
    ]
